added theme-color support for chrome 39

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   <meta name="author" content="{{ site.author.name }}" />
+  <meta name="theme-color" content="#a50509">
   
   {% if page.subtitle %}
   <meta name="description" content="{{ page.subtitle }}">
