--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -37,23 +37,14 @@
       </ul>
     </div>
 
-  {% if page.image and (layout.show-avatar or page.show-avatar) %}
+<!-- ALways use my avatar, irrespective of the post image -->
   <div class="avatar-container">
     <div class="avatar-img-border">
       <a href="{{ site.url }} ">
-        <img class="avatar-img" src="{{ page.image | prepend: site.baseurl | replace: '//', '/' }}" />
-    </a>
+        <img class="avatar-img" src="{{ site.url }}/img/av.png" />
+     </a>
     </div>
   </div>
-  {% elsif site.avatar and (layout.show-avatar or page.show-avatar) %}
-  <div class="avatar-container">
-    <div class="avatar-img-border">
-      <a href="{{ site.url }} ">
-        <img class="avatar-img" src="{{ site.avatar | prepend: site.baseurl | replace: '//', '/' }}" />
-    </a>
-    </div>
-  </div>
-  {% endif %}
 
   </div>
 </nav>
