Updated about me page

--- a/css/main.css
+++ b/css/main.css
@@ -800,3 +800,24 @@ td.gutter {
 .gist, .gist-file table tr td {
   border: unset;
 }
+
+/* --- Custom: About me section --- */
+#aboutme-section {
+  font-size: 19px;
+}
+
+.about-text {
+  position: relative;
+  margin-left: 30px;
+}
+
+.about-icon {
+  font-size: 24px;
+  position: absolute;
+  left: -40px;
+  margin-top: 5px;
+}
+
+#aboutme-section p:last-child {
+  margin-bottom: 0;
+}
