--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,9 @@
   <meta name="description" content="Hi! I'm Anudit Verma, Computer Science engineer from USICT, New Delhi. I'm a programmer, software developer, former GSoC student, loves to create digital art, listen to music and play video games. Loves to meet new people, connect, discuss, network and grow, mostly at software developers’ conferences, dev-fests and gaming meet-ups.">
   <meta name="keywords" content="anudit, verma, geek, linux, science, math, mathematics, gsoc, google summer of code, raspberry pi, music, Internet of Things, research, android">
 
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/png" href="favicon.png" />
+
   <!-- MathJax -->
   <script type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: 'none',tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
