--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="anudit, verma, geek, linux, science, math, mathematics, gsoc, google summer of code, raspberry pi, music, Internet of Things, research, android">
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
   <!-- MathJax -->
   <script type="text/x-mathjax-config">MathJax.Hub.Config({messageStyle: 'none',tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
