--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,15 +3,18 @@ common-css:
   - "/css/bootstrap.min.css"
   - "/css/bootstrap-social.css"
   - "/css/main.css"
+  - "/css/particle-js-style.css"
 common-ext-css:
-  - "//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
+  - "//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 common-googlefonts:
   - "Lora:400,700,400italic,700italic"
   - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
 common-js:
-  - "/js/jquery-1.11.2.min.js"
+  - "/js/jquery-1.12.4.min.js"
   - "/js/bootstrap.min.js"
   - "/js/main.js"
+  - "/js/particles.min.js"
+  - "/js/particles-config.js"
 ---
 
 <!DOCTYPE html>
@@ -20,6 +23,10 @@ common-js:
   {% include head.html %}
 
   <body>
+
+    <!-- particles.js container -->
+    <div id="particles-js"></div>
+
     {% include gtm_body.html %}
     
     {% include nav.html %}
