hide particle.js rendering on phones

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,8 +24,10 @@ common-js:
 
   <body>
 
+  <div class="mobile-js-hide">
     <!-- particles.js container -->
     <div id="particles-js"></div>
+  </div>
 
     {% include gtm_body.html %}
     
