--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,11 +1,17 @@
-{%- if site.disqus -%}
+{% if site.disqus %}
 <div class="comments">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         var disqus_shortname = '{{ site.disqus }}';
-        /* ensure that pages with query string get the same discussion */
             var url_parts = window.location.href.split("?");
-            var disqus_url = url_parts[0];
+            url_parts = url_parts[0].split("#");
+            disqus_url = url_parts[0];
+            disqus_url = disqus_url.replace(/(\/)*$/, "/");
+            disqus_url = disqus_url.replace(/https:\/\//, "http:\/\/");
+            if (disqus_url.substr(-9) == "projects/") {
+                disqus_url = disqus_url.substr(0, disqus_url.length - 1);
+            }
+
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
             dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -14,4 +20,4 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </div>
-{%- endif -%}
+{% endif %}
