--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,8 @@
 
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="theme-color" content="#a50509">
-  <meta name="description" content="Hi! I'm Anudit Verma, Computer Science engineer from USICT, New Delhi. I'm a programmer, software developer, former GSoC student, loves to create digital art, listen to music and play video games. Loves to meet new people, connect, discuss, network and grow, mostly at software developers’ conferences, dev-fests and gaming meet-ups.">
-  <meta name="keywords" content="anudit, verma, geek, linux, science, math, mathematics, gsoc, google summer of code, raspberry pi, music, Internet of Things, research, android">
+  <meta name="description" content="Hi! I am Anudit Verma, a Computer Science engineer from USICT, New Delhi. I am currently pursuing MS in CS from Cal State Long Beach. I am a software developer, programmer, and a former GSoC student. I love to create digital art, listen to music and play video games. I am eager to meet and connect with new people at software developers’ conferences, dev-fests, and gaming meet-ups.">
+  <meta name="keywords" content="anudit, verma, geek, linux, science, math, mathematics, computer science, gsoc, google summer of code, raspberry pi, music, Internet of Things, research, android, hackathons, MS, California">
 
   <!-- favicon -->
   <link rel="shortcut icon" type="image/png" href="/favicon.png" />
