updated aboutme text on header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="theme-color" content="#a50509">
-  <meta name="description" content="Hi! I am Anudit Verma, a Computer Science engineer from USICT, New Delhi. I am currently pursuing MS in CS from Cal State Long Beach. I am a software developer, programmer, and a former GSoC student. I love to create digital art, listen to music and play video games. I am eager to meet and connect with new people at hackathons, developers’ conferences, dev-fests, and gaming meet-ups.">
+  <meta name="description" content="Hi! I am Anudit Verma, a Computer Science engineer from USICT, New Delhi. I am currently pursuing MS in CS from California State University, Long Beach. I am a software developer, programmer, and a former GSoC student. I love to create digital art, listen to music and play video games. I am eager to meet and connect with new people at hackathons, developers’ conferences, dev-fests, and gaming meet-ups.">
   <meta name="keywords" content="anudit, verma, geek, linux, science, math, mathematics, computer science, gsoc, google summer of code, raspberry pi, music, Internet of Things, research, android, hackathons, MS, California">
 
   <!-- favicon -->
