Minor Fix: Changed http to https on footer.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
           <!-- Please don't remove this, keep my open source work credited :) -->
     <p class="theme-by text-muted">
       Awesome Theme by
-      <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
+      <a href="https://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
     </p>
       </div>
     </div>
