--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,5 @@
 {% if site.disqus %}
+<div class="disqus-comments">
 <div class="comments">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
@@ -19,5 +20,6 @@
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</div>
 </div>
 {% endif %}
