--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,13 +69,7 @@ layout: base
         </li>
         {% endif %}
       </ul>
-
-      {% if page.comments %}
-        <div class="disqus-comments">
-          {% include disqus.html %}
-        </div>
-          {% include fb-comment.html %}
-      {% endif %}
+        {% include comments.html %}
     </div>
   </div>
 </div>
