Full fleged site restructuring

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
       </p>
         <!-- Please don't remove this, keep my open source work credited :) -->
       <p class="theme-by text-muted">
-        Awesome Theme by
+        Theme by
       <a href="https://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
     </p>
       </div>
