--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -39,7 +39,7 @@
   <div class="avatar-container">
     <div class="avatar-img-border">
       <a href="{{ '' | absolute_url }}">
-        <img class="avatar-img" src="{{ site.url }}/assets/img/av.jpg" />
+        <img class="avatar-img" src="{{ site.url }}/assets/img/nimesh.jpg" />
      </a>
     </div>
   </div>
