--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,8 @@
     	<div class="row">
       		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         		<div class="{{ include.type }}-heading">
-          			<h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
+                <!-- Using page.meta-title instead of page.title to display "Hi, I'm Anudit" on the home page. -->
+          			<h1>{% if page.meta-title %}{{ page.meta-title }}{% else %}<br/>{% endif %}</h1>
     		{% if page.subtitle %}
         		{% if include.type == "page" %}
                     <hr class="small">
@@ -65,8 +66,10 @@
       					</script>
       				{% endif %}
   					<script>
+
+              // Using page.meta-title instead of page.title to display "Hi, I'm Anudit" on the home page.
         				if (flag != 1) {
-        					document.writeln("<h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>");
+        					document.writeln("<h1>{% if page.meta-title %}{{ page.meta-title }}{% else %}<br/>{% endif %}</h1>");
         				}
         				else if (flag == 1) {
         					document.writeln("<h1>{% if page.only-about-me %}{{ page.only-about-me }}{% else %}<br/>{% endif %}</h1>");
