--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,10 +25,10 @@ layout: page
     </p>
 
     <div class="post-entry-container">
-      {% if post.thumbnail-img %}
+      {% if post.image %}
       <div class="post-image">
         <a href="{{ post.url | relative_url }}">
-          <img src="{{ post.thumbnail-img | relative_url }}">
+          <img src="{{ post.image | relative_url }}">
         </a>
       </div>
       {% endif %}
