--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,51 +52,34 @@
 </div>
 {% endif %}
 <div class="intro-header no-img">
-  	<div class="container-md">
-    	<div class="row">
-      		<div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
-        		<div class="{{ include.type }}-heading">
-        			<!-- A small script that takes care of visibility of "About me" (used to be meta-title but now serves as only-about-me on aboutme.md) on About me page. Displays "About me" instead of "About Anudit Verma" (title). -->
-        			<script>
-    					var flag = 0
-  					</script>
-					{% if page.only-about-me %}
-      					<script>
-        					flag = 1
-      					</script>
-      				{% endif %}
-  					<script>
-            // Using page.meta-title instead of page.title to display "Hi, I'm Anudit" on the home page.
-      				if (flag != 1) {
-      					document.writeln("<h1>{% if page.meta-title %}{{ page.meta-title }}{% else %}<br/>{% endif %}</h1>");
-      				}
-      				else if (flag == 1) {
-      					document.writeln("<h1>{% if page.only-about-me %}{{ page.only-about-me }}{% else %}<br/>{% endif %}</h1>");
-      				}
-      			</script>
-
-            {% if page.subtitle %}
-        		{% if include.type == "page" %}
-                    <hr class="small">
-            		<span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
-            {% else %}
-    	<h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
-      	{% endif %}
-      	{% endif %}
-
-      	{% if include.type == "post" %}
-        	<span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
-        	{% if page.readtime %}
-        		{% include readtime.html %}
-        	{% endif %}
-      	{% endif %}
-        		</div>
-      		</div>
-    	</div>
-  	</div>
+  <div class="container-md">
+    <div class="row">
+      <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
+        <div class="{{ include.type }}-heading">
+          <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
+      {% if page.subtitle %}
+        {% if include.type == "page" %}
+            <hr class="small">
+            <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
+      {% else %}
+      <h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
+      {% endif %}
+      {% endif %}
+      
+      {% if include.type == "post" %}
+          <span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
+          {% if page.readtime %}
+            {% include readtime.html %}
+          {% endif %}
+      {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </header>
 
+
 {% else %}
-	<div class="intro-header"></div>
+<div class="intro-header"></div>
 {% endif %}
