--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,41 @@
 ---
 layout: base
+
+common-js:
+  - "/assets/js/beautifuljekyll.js"
+  - "/assets/js/particles.min.js"
+  - "/assets/js/particles-config.js"
 ---
+
+<!-- particles.js container -->
+<div class="mobile-js-hide">
+  <div id="particles-js"></div>
+</div>
 
 {% include header.html type="page" %}
 
-<div class="container-md" role="main">
+<div class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}" role="main">
   <div class="row">
-    <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
+    <div class="{% if page.full-width %} col {% else %} col-xl-8 offset-xl-2 col-lg-10 offset-lg-1 {% endif %}">
+      {% if page.before-content %}
+        <div class="before-content">
+          {% for file in page.before-content %}
+            {% include {{ file }} %}
+          {% endfor %}
+        </div>
+      {% endif %}
+
       {{ content }}
-	  {% include comments.html %}
+
+      {% if page.after-content %}
+        <div class="after-content">
+          {% for file in page.after-content %}
+            {% include {{ file }} %}
+          {% endfor %}
+        </div>
+      {% endif %}
+
+      {% include comments.html %}
     </div>
   </div>
 </div>
