--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,16 +6,16 @@
 
 {% if page.cover-img %}
   <div id="header-big-imgs" data-num-img={% if page.cover-img.first %}{{ page.cover-img.size }}{% else %}1{% endif %}
-    {% for cover-img in page.cover-img %}
-	    {% assign imgnum = forloop.index %}
-	    {% for imginfo in cover-img %}
-	      {% if imginfo[0] %}
-	      data-img-src-{{ imgnum }}="{{ imginfo[0] | relative_url }}"
-	      data-img-desc-{{ imgnum }}="{{ imginfo[1] }}"
-	    {% else %}
-	      data-img-src-{{ imgnum }}="{{ imginfo | relative_url }}"
-	    {% endif %}
-	    {% endfor %}
+    {% for bigimg in page.cover-img %}
+    {% assign imgnum = forloop.index %}
+    {% for imginfo in bigimg %}
+      {% if imginfo[0] %}
+      data-img-src-{{ imgnum }}="{{ imginfo[0] | absolute_url }}"
+      data-img-desc-{{ imgnum }}="{{ imginfo[1] }}"
+    {% else %}
+      data-img-src-{{ imgnum }}="{{ imginfo | absolute_url }}"
+    {% endif %}
+    {% endfor %}
     {% endfor %}
   ></div>
 {% endif %}
@@ -23,32 +23,39 @@
 <header class="header-section {% if page.cover-img %}has-img{% endif %}">
 {% if page.cover-img %}
 <div class="big-img intro-header">
-	<div class="container-md">
-    	<div class="row">
-      		<div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
-        		<div class="{{ include.type }}-heading">
-                <!-- Using page.meta-title instead of page.title to display "Hi, I'm Anudit" on the home page. -->
-          			<h1>{% if page.meta-title %}{{ page.meta-title }}{% else %}<br/>{% endif %}</h1>
-    		{% if page.subtitle %}
-        		{% if include.type == "page" %}
-                    <hr class="small">
-            		<span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
+  <div class="container-md">
+    <div class="row">
+      <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
+        <div class="{{ include.type }}-heading">
+          <!-- Using page.meta-title instead of page.title to display "Hi, I'm Anudit" on the home page. -->
+          <h1>{% if page.meta-title %}{{ page.meta-title | strip_html }}{% else %}<br/>{% endif %}</h1>
+          <!-- <h1>{% if page.title %}{{ page.title | strip_html }}{% else %}<br/>{% endif %}</h1> -->
+          {% if page.subtitle %}
+            {% if include.type == "page" %}
+              <hr class="small">
+              <span class="{{ include.type }}-subheading">{{ page.subtitle | strip_html }}</span>
             {% else %}
-      		<h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
-      		{% endif %}
-      		{% endif %}
+              <h2 class="{{ include.type }}-subheading">{{ page.subtitle | strip_html }}</h2>
+            {% endif %}
+          {% endif %}
 
-      		{% if include.type == "post" %}
-          		<span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
-          		{% if page.readtime %}
-            		{% include readtime.html %}
-          		{% endif %}
-      		{% endif %}
-        		</div>
-      		</div>
-    	</div>
-  	</div>
-	<span class='img-desc'></span>
+          {% if include.type == "post" %}
+            <span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
+            {% if page.last-updated %}
+              <span class="post-meta">
+                <span class="d-none d-md-inline middot">&middot;</span>
+                Last updated {{ page.last-updated | date: date_format }}
+              </span>
+            {% endif %}
+            {% if page.readtime %}
+              {% include readtime.html %}
+            {% endif %}
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+  <span class='img-desc'></span>
 </div>
 {% endif %}
 <div class="intro-header no-img">
@@ -56,22 +63,28 @@
     <div class="row">
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
         <div class="{{ include.type }}-heading">
-          <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
-      {% if page.subtitle %}
-        {% if include.type == "page" %}
-            <hr class="small">
-            <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
-      {% else %}
-      <h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
-      {% endif %}
-      {% endif %}
-      
-      {% if include.type == "post" %}
-          <span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
-          {% if page.readtime %}
-            {% include readtime.html %}
+          <h1>{% if page.title %}{{ page.title | strip_html }}{% else %}<br/>{% endif %}</h1>
+          {% if page.subtitle %}
+            {% if include.type == "page" %}
+              <hr class="small">
+              <span class="{{ include.type }}-subheading">{{ page.subtitle | strip_html }}</span>
+            {% else %}
+              <h2 class="{{ include.type }}-subheading">{{ page.subtitle | strip_html }}</h2>
+            {% endif %}
           {% endif %}
-      {% endif %}
+
+          {% if include.type == "post" %}
+            <span class="post-meta">Posted on {{ page.date | date: date_format }}</span>
+            {% if page.last-updated %}
+              <span class="post-meta">
+                <span class="d-none d-md-inline middot">&middot;</span>
+                Last updated {{ page.last-updated | date: date_format }}
+              </span>
+            {% endif %}
+            {% if page.readtime %}
+              {% include readtime.html %}
+            {% endif %}
+          {% endif %}
         </div>
       </div>
     </div>
