--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@ common-js:
 
 {% include header.html type="page" %}
 
-<div class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}" role="main">
+<main class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}">
   <div class="row">
     <div class="{% if page.full-width %} col {% else %} col-xl-8 offset-xl-2 col-lg-10 offset-lg-1 {% endif %}">
       {% if page.before-content %}
@@ -38,4 +38,4 @@ common-js:
       {% include comments.html %}
     </div>
   </div>
-</div>
+</main>
