--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,14 +54,6 @@
   <!-- favicon -->
   <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
-  <!-- MathJax -->
-  <script type="text/x-mathjax-config">MathJax = {
-    tex: {
-      inlineMath: [['$', '$'], ['\\(', '\\)']]
-    }
-  };</script>
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-
   {% if site.rss-description %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}">
   {% endif %}
@@ -70,6 +62,7 @@
   {% include gtm_head.html %}
   {% include google_analytics.html %}
   {% include cloudflare_analytics.html %}
+  {% include mathjax.html %}
 
   {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
