Minor Update: Changed Twitter icon to X

--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -86,12 +86,12 @@
 
 {%- if site.social-network-links.twitter -%}
   <li class="list-inline-item">
-    <a href="https://twitter.com/{{ site.social-network-links.twitter }}" title="Twitter">
+    <a href="https://twitter.com/{{ site.social-network-links.twitter }}" title="X (Twitter)">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
-        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+        <i class="fab fa-x-twitter fa-stack-1x fa-inverse"></i>
       </span>
-      <span class="sr-only">Twitter</span>
+      <span class="sr-only">X (Twitter)</span>
    </a>
   </li>
 {%- endif -%}
